--- a/notebook/finance.ipynb
+++ b/notebook/finance.ipynb
@@ -277,14 +277,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 616
         },
         "id": "yMpT8mPFyfIr",
-        "outputId": "d449186d-e987-4444-a703-cdcfb020ce7b"
+        "outputId": "a0ec4733-8d72-477d-b048-d531f6d3c76f"
       },
       "outputs": [
         {
@@ -328,7 +328,7 @@
               "                        iframe.width = width;\n",
               "                        iframe.style.border = 0;\n",
               "                        element.appendChild(iframe);\n",
-              "                    })(7871, \"/\", \"100%\", 500, false, window.element)"
+              "                    })(7878, \"/\", \"100%\", 500, false, window.element)"
             ]
           },
           "metadata": {}
@@ -339,7 +339,7 @@
             "text/plain": []
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 28
         }
       ],
       "source": [
@@ -360,7 +360,7 @@
         "\n",
         "Author: Gang Luo\n",
         "'''\n",
-        "script_version = '(2024-01-25.1)'\n",
+        "script_version = '(2024-01-25.4)'\n",
         "import gradio as gr\n",
         "import yfinance as yf\n",
         "import pandas as pd\n",
@@ -377,13 +377,13 @@
         "years_list = [1, 2, 3, 5, 10, 15, 20, 25, 30]\n",
         "\n",
         "# Set the stock tickers list\n",
-        "tickers_lists = [[\"spy\", \"vfv.to\",\"xiu.to\"], #0\n",
+        "tickers_lists = [[\"qqq\",\"hxq.to\",\"spy\", \"vfv.to\",\"xiu.to\", \"xbb.to\",\"xcb.to\",\"xhb.to\"], #0\n",
         "    [\"spy\", \"vfv.to\", \"vgg.to\", \"zlu.to\", \"xiu.to\", \"vdy.to\", \"xfn.to\", \"ry.to\", \"td.to\", \"na.to\",\n",
         "      \"slf.to\", \"gwo.to\", \"bce.to\", \"t.to\", \"rci-b.to\", \"enb.to\", \"trp.to\", \"zlb.to\", \"cp.to\"], #1\n",
         "    [\"spy\",\"vfv.to\", \"xiu.to\", \"zeb.to\", \"xfn.to\", \"na.to\",\"ry.to\", \"bmo.to\",\"bns.to\", \"td.to\", \"cm.to\", \"cwb.to\",\n",
         "      \"slf.to\", \"gwo.to\", \"bce.to\", \"t.to\", \"rci-b.to\", \"enb.to\", \"trp.to\", \"xdv.to\",\"cdz.to\",\"vdy.to\"],  #2\n",
         "    [\"spy\", \"vfv.to\", \"vgg.to\", \"zlu.to\",\"goog\", \"msft\", \"meta\", \"tsla\",\"AMZN\", \"AAPL\", \"shop.to\"],   #3\n",
-        "    [\"^GSPC\",\"spy\",\"voo\",\"ivv\", \"vfv.to\", \"zsp.to\",\"xus.to\", \"xsp.to\",\"^IXIC\",\"qqq\",\"hxq.to\",\"^GSPTSE\",\"xic.to\",\"xiu.to\",\"xfn.to\", \"fie.to\"], #4\n",
+        "    [\"^GSPC\",\"spy\",\"voo\",\"ivv\", \"tpu-u.to\",\"vfv.to\", \"zsp.to\",\"hxs.to\",\"tpu.to\",\"xus.to\", \"xsp.to\",\"^IXIC\",\"qqq\",\"hxq.to\",\"^GSPTSE\",\"xic.to\",\"xiu.to\",\"xfn.to\", \"fie.to\"], #4\n",
         "    [\"^IXIC\",\"ONEQ\",\"CIBR\",\"QQJG\", \"qqq\", \"spy\", \"vfv.to\", \"HXQ.to\", \"ZQQ.to\", \"XQQ.to\", \"QQC.to\"],  #5\n",
         "    [\"goog\", \"msft\", \"^GSPC\"]\n",
         "]\n",
@@ -901,8 +901,8 @@
           "base_uri": "https://localhost:8080/",
           "height": 616
         },
-        "outputId": "d449186d-e987-4444-a703-cdcfb020ce7b",
-        "id": "BxvhT5bj6-v9"
+        "outputId": "a0ec4733-8d72-477d-b048-d531f6d3c76f",
+        "id": "qpRQErExYO9C"
       },
       "outputs": [
         {
@@ -946,7 +946,7 @@
               "                        iframe.width = width;\n",
               "                        iframe.style.border = 0;\n",
               "                        element.appendChild(iframe);\n",
-              "                    })(7871, \"/\", \"100%\", 500, false, window.element)"
+              "                    })(7878, \"/\", \"100%\", 500, false, window.element)"
             ]
           },
           "metadata": {}
@@ -957,7 +957,7 @@
             "text/plain": []
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 28
         }
       ],
       "source": [
@@ -978,7 +978,7 @@
         "\n",
         "Author: Gang Luo\n",
         "'''\n",
-        "script_version = '(2024-01-25.1)'\n",
+        "script_version = '(2024-01-25.4)'\n",
         "import gradio as gr\n",
         "import yfinance as yf\n",
         "import pandas as pd\n",
@@ -995,13 +995,13 @@
         "years_list = [1, 2, 3, 5, 10, 15, 20, 25, 30]\n",
         "\n",
         "# Set the stock tickers list\n",
-        "tickers_lists = [[\"spy\", \"vfv.to\",\"xiu.to\"], #0\n",
+        "tickers_lists = [[\"qqq\",\"hxq.to\",\"spy\", \"vfv.to\",\"xiu.to\", \"xbb.to\",\"xcb.to\",\"xhb.to\"], #0\n",
         "    [\"spy\", \"vfv.to\", \"vgg.to\", \"zlu.to\", \"xiu.to\", \"vdy.to\", \"xfn.to\", \"ry.to\", \"td.to\", \"na.to\",\n",
         "      \"slf.to\", \"gwo.to\", \"bce.to\", \"t.to\", \"rci-b.to\", \"enb.to\", \"trp.to\", \"zlb.to\", \"cp.to\"], #1\n",
         "    [\"spy\",\"vfv.to\", \"xiu.to\", \"zeb.to\", \"xfn.to\", \"na.to\",\"ry.to\", \"bmo.to\",\"bns.to\", \"td.to\", \"cm.to\", \"cwb.to\",\n",
         "      \"slf.to\", \"gwo.to\", \"bce.to\", \"t.to\", \"rci-b.to\", \"enb.to\", \"trp.to\", \"xdv.to\",\"cdz.to\",\"vdy.to\"],  #2\n",
         "    [\"spy\", \"vfv.to\", \"vgg.to\", \"zlu.to\",\"goog\", \"msft\", \"meta\", \"tsla\",\"AMZN\", \"AAPL\", \"shop.to\"],   #3\n",
-        "    [\"^GSPC\",\"spy\",\"voo\",\"ivv\", \"vfv.to\", \"zsp.to\",\"xus.to\", \"xsp.to\",\"^IXIC\",\"qqq\",\"hxq.to\",\"^GSPTSE\",\"xic.to\",\"xiu.to\",\"xfn.to\", \"fie.to\"], #4\n",
+        "    [\"^GSPC\",\"spy\",\"voo\",\"ivv\", \"tpu-u.to\",\"vfv.to\", \"zsp.to\",\"hxs.to\",\"tpu.to\",\"xus.to\", \"xsp.to\",\"^IXIC\",\"qqq\",\"hxq.to\",\"^GSPTSE\",\"xic.to\",\"xiu.to\",\"xfn.to\", \"fie.to\"], #4\n",
         "    [\"^IXIC\",\"ONEQ\",\"CIBR\",\"QQJG\", \"qqq\", \"spy\", \"vfv.to\", \"HXQ.to\", \"ZQQ.to\", \"XQQ.to\", \"QQC.to\"],  #5\n",
         "    [\"goog\", \"msft\", \"^GSPC\"]\n",
         "]\n",
@@ -6608,7 +6608,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN6hwn77GE3BJ+lxqDT57np",
+      "authorship_tag": "ABX9TyM/XYfUlO4nkObsNq3A4GIA",
       "include_colab_link": true
     },
     "kernelspec": {
