--- a/notebook/finance.ipynb
+++ b/notebook/finance.ipynb
@@ -62,20 +62,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ioaa1xHRkhrj",
-        "outputId": "99f64318-d24b-43ce-a1f8-c52a0974cc6d"
+        "outputId": "bb772f77-95ae-4842-fd57-130663ad3f84"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: gradio in /usr/local/lib/python3.10/dist-packages (4.15.0)\n",
+            "Requirement already satisfied: gradio in /usr/local/lib/python3.10/dist-packages (4.16.0)\n",
             "Requirement already satisfied: aiofiles<24.0,>=22.0 in /usr/local/lib/python3.10/dist-packages (from gradio) (23.2.1)\n",
             "Requirement already satisfied: altair<6.0,>=4.2.0 in /usr/local/lib/python3.10/dist-packages (from gradio) (4.2.2)\n",
             "Requirement already satisfied: fastapi in /usr/local/lib/python3.10/dist-packages (from gradio) (0.109.0)\n",
@@ -277,14 +277,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 616
         },
         "id": "yMpT8mPFyfIr",
-        "outputId": "a0ec4733-8d72-477d-b048-d531f6d3c76f"
+        "outputId": "36bb4a05-1872-401f-82c7-213eb5a2ab06"
       },
       "outputs": [
         {
@@ -328,7 +328,7 @@
               "                        iframe.width = width;\n",
               "                        iframe.style.border = 0;\n",
               "                        element.appendChild(iframe);\n",
-              "                    })(7878, \"/\", \"100%\", 500, false, window.element)"
+              "                    })(7863, \"/\", \"100%\", 500, false, window.element)"
             ]
           },
           "metadata": {}
@@ -339,11 +339,10 @@
             "text/plain": []
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 6
         }
       ],
       "source": [
-        "from math import nan\n",
         "'''\n",
         "Example 8 for using yfinance\n",
         "\n",
@@ -360,7 +359,7 @@
         "\n",
         "Author: Gang Luo\n",
         "'''\n",
-        "script_version = '(2024-01-25.4)'\n",
+        "script_version = '(2024-01-26.1)'\n",
         "import gradio as gr\n",
         "import yfinance as yf\n",
         "import pandas as pd\n",
@@ -382,7 +381,7 @@
         "      \"slf.to\", \"gwo.to\", \"bce.to\", \"t.to\", \"rci-b.to\", \"enb.to\", \"trp.to\", \"zlb.to\", \"cp.to\"], #1\n",
         "    [\"spy\",\"vfv.to\", \"xiu.to\", \"zeb.to\", \"xfn.to\", \"na.to\",\"ry.to\", \"bmo.to\",\"bns.to\", \"td.to\", \"cm.to\", \"cwb.to\",\n",
         "      \"slf.to\", \"gwo.to\", \"bce.to\", \"t.to\", \"rci-b.to\", \"enb.to\", \"trp.to\", \"xdv.to\",\"cdz.to\",\"vdy.to\"],  #2\n",
-        "    [\"spy\", \"vfv.to\", \"vgg.to\", \"zlu.to\",\"goog\", \"msft\", \"meta\", \"tsla\",\"AMZN\", \"AAPL\", \"shop.to\"],   #3\n",
+        "    [\"qqq\",\"spy\", \"vfv.to\", \"vgg.to\",\"zlu.to\",\"msft\",\"AAPL\",\"goog\",\"AMZN\",\"NVDA\",\"meta\",\"tsla\",\"shop.to\",\"hxq.to\"],   #3\n",
         "    [\"^GSPC\",\"spy\",\"voo\",\"ivv\", \"tpu-u.to\",\"vfv.to\", \"zsp.to\",\"hxs.to\",\"tpu.to\",\"xus.to\", \"xsp.to\",\"^IXIC\",\"qqq\",\"hxq.to\",\"^GSPTSE\",\"xic.to\",\"xiu.to\",\"xfn.to\", \"fie.to\"], #4\n",
         "    [\"^IXIC\",\"ONEQ\",\"CIBR\",\"QQJG\", \"qqq\", \"spy\", \"vfv.to\", \"HXQ.to\", \"ZQQ.to\", \"XQQ.to\", \"QQC.to\"],  #5\n",
         "    [\"goog\", \"msft\", \"^GSPC\"]\n",
@@ -901,8 +900,8 @@
           "base_uri": "https://localhost:8080/",
           "height": 616
         },
-        "outputId": "a0ec4733-8d72-477d-b048-d531f6d3c76f",
-        "id": "qpRQErExYO9C"
+        "outputId": "36bb4a05-1872-401f-82c7-213eb5a2ab06",
+        "id": "gAX8tiBITO5c"
       },
       "outputs": [
         {
@@ -946,7 +945,7 @@
               "                        iframe.width = width;\n",
               "                        iframe.style.border = 0;\n",
               "                        element.appendChild(iframe);\n",
-              "                    })(7878, \"/\", \"100%\", 500, false, window.element)"
+              "                    })(7863, \"/\", \"100%\", 500, false, window.element)"
             ]
           },
           "metadata": {}
@@ -957,11 +956,10 @@
             "text/plain": []
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 6
         }
       ],
       "source": [
-        "from math import nan\n",
         "'''\n",
         "Example 8 for using yfinance\n",
         "\n",
@@ -978,7 +976,7 @@
         "\n",
         "Author: Gang Luo\n",
         "'''\n",
-        "script_version = '(2024-01-25.4)'\n",
+        "script_version = '(2024-01-26.1)'\n",
         "import gradio as gr\n",
         "import yfinance as yf\n",
         "import pandas as pd\n",
@@ -1000,7 +998,7 @@
         "      \"slf.to\", \"gwo.to\", \"bce.to\", \"t.to\", \"rci-b.to\", \"enb.to\", \"trp.to\", \"zlb.to\", \"cp.to\"], #1\n",
         "    [\"spy\",\"vfv.to\", \"xiu.to\", \"zeb.to\", \"xfn.to\", \"na.to\",\"ry.to\", \"bmo.to\",\"bns.to\", \"td.to\", \"cm.to\", \"cwb.to\",\n",
         "      \"slf.to\", \"gwo.to\", \"bce.to\", \"t.to\", \"rci-b.to\", \"enb.to\", \"trp.to\", \"xdv.to\",\"cdz.to\",\"vdy.to\"],  #2\n",
-        "    [\"spy\", \"vfv.to\", \"vgg.to\", \"zlu.to\",\"goog\", \"msft\", \"meta\", \"tsla\",\"AMZN\", \"AAPL\", \"shop.to\"],   #3\n",
+        "    [\"qqq\",\"spy\", \"vfv.to\", \"vgg.to\",\"zlu.to\",\"msft\",\"AAPL\",\"goog\",\"AMZN\",\"NVDA\",\"meta\",\"tsla\",\"shop.to\",\"hxq.to\"],   #3\n",
         "    [\"^GSPC\",\"spy\",\"voo\",\"ivv\", \"tpu-u.to\",\"vfv.to\", \"zsp.to\",\"hxs.to\",\"tpu.to\",\"xus.to\", \"xsp.to\",\"^IXIC\",\"qqq\",\"hxq.to\",\"^GSPTSE\",\"xic.to\",\"xiu.to\",\"xfn.to\", \"fie.to\"], #4\n",
         "    [\"^IXIC\",\"ONEQ\",\"CIBR\",\"QQJG\", \"qqq\", \"spy\", \"vfv.to\", \"HXQ.to\", \"ZQQ.to\", \"XQQ.to\", \"QQC.to\"],  #5\n",
         "    [\"goog\", \"msft\", \"^GSPC\"]\n",
@@ -6608,7 +6606,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM/XYfUlO4nkObsNq3A4GIA",
+      "authorship_tag": "ABX9TyPxwZp/zuioQXnvtZkKxHsJ",
       "include_colab_link": true
     },
     "kernelspec": {
