--- a/notebook/finance.ipynb
+++ b/notebook/finance.ipynb
@@ -71,7 +71,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -332,49 +332,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 646
-        },
-        "outputId": "c01f89b4-d181-4108-a67f-0cee93118a18",
         "id": "zo7mcfMoQSi-"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Setting queue=True in a Colab notebook requires sharing enabled. Setting `share=True` (you can turn this off by setting `share=False` in `launch()` explicitly).\n",
-            "\n",
-            "Colab notebook detected. To show errors in colab notebook, set debug=True in launch()\n",
-            "Running on public URL: https://7921a4b56ec06d3c03.gradio.live\n",
-            "\n",
-            "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from Terminal to deploy to Spaces (https://huggingface.co/spaces)\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              "<div><iframe src=\"https://7921a4b56ec06d3c03.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": []
-          },
-          "metadata": {},
-          "execution_count": 100
-        }
-      ],
+      "outputs": [],
       "source": [
         "'''\n",
         "Example 9 for using yfinance\n",
@@ -393,7 +355,7 @@
         "\n",
         "Author: Gang Luo\n",
         "'''\n",
-        "script_version = '(2024-03-03.1)'\n",
+        "script_version = '(2024-03-04.1)'\n",
         "import gradio as gr\n",
         "import yfinance as yf\n",
         "import pandas as pd\n",
@@ -462,6 +424,7 @@
         "    data_adj_close_year_end_df.columns = map(str.lower, data_adj_close_year_end_df.columns)\n",
         "\n",
         "    data_adj_close.index=data_adj_close.index.date\n",
+        "    data_adj_close.columns = map(str.lower, data_adj_close.columns)\n",
         "    return data_adj_close_year_end_df, data_adj_close\n",
         "\n",
         "#==============================================================================\n",
@@ -496,14 +459,12 @@
         "    annual_returns_percent = annual_returns.pct_change().dropna(how='all')\n",
         "\n",
         "    annual_returns_df = pd.DataFrame(annual_returns_percent)\n",
-        "    annual_returns_df.columns = map(str.lower, annual_returns_df.columns)\n",
         "    #print(\"\\ndebug-annual_returns_df\\n\", annual_returns_df)\n",
         "    return annual_returns_df\n",
         "\n",
         "# annual return calculation can start at year end\n",
         "def get_annual_returns_year_end_df(data_adj_close_df, calculation_end_date_str):\n",
         "    annual_returns_percent = data_adj_close_df.pct_change().dropna(how='all')\n",
-        "    annual_returns_percent.columns = map(str.lower, annual_returns_percent.columns)\n",
         "    return annual_returns_percent\n",
         "\n",
         "#==============================================================================\n",
@@ -893,47 +854,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 646
-        },
-        "outputId": "c01f89b4-d181-4108-a67f-0cee93118a18",
-        "id": "O_pxr20oknnc"
+        "id": "9reJWi-72DAT"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Setting queue=True in a Colab notebook requires sharing enabled. Setting `share=True` (you can turn this off by setting `share=False` in `launch()` explicitly).\n",
-            "\n",
-            "Colab notebook detected. To show errors in colab notebook, set debug=True in launch()\n",
-            "Running on public URL: https://7921a4b56ec06d3c03.gradio.live\n",
-            "\n",
-            "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from Terminal to deploy to Spaces (https://huggingface.co/spaces)\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              "<div><iframe src=\"https://7921a4b56ec06d3c03.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": []
-          },
-          "metadata": {},
-          "execution_count": 100
-        }
-      ],
+      "outputs": [],
       "source": [
         "'''\n",
         "Example 9 for using yfinance\n",
@@ -952,7 +875,7 @@
         "\n",
         "Author: Gang Luo\n",
         "'''\n",
-        "script_version = '(2024-03-03.1)'\n",
+        "script_version = '(2024-03-04.1)'\n",
         "import gradio as gr\n",
         "import yfinance as yf\n",
         "import pandas as pd\n",
@@ -1021,6 +944,7 @@
         "    data_adj_close_year_end_df.columns = map(str.lower, data_adj_close_year_end_df.columns)\n",
         "\n",
         "    data_adj_close.index=data_adj_close.index.date\n",
+        "    data_adj_close.columns = map(str.lower, data_adj_close.columns)\n",
         "    return data_adj_close_year_end_df, data_adj_close\n",
         "\n",
         "#==============================================================================\n",
@@ -1055,14 +979,12 @@
         "    annual_returns_percent = annual_returns.pct_change().dropna(how='all')\n",
         "\n",
         "    annual_returns_df = pd.DataFrame(annual_returns_percent)\n",
-        "    annual_returns_df.columns = map(str.lower, annual_returns_df.columns)\n",
         "    #print(\"\\ndebug-annual_returns_df\\n\", annual_returns_df)\n",
         "    return annual_returns_df\n",
         "\n",
         "# annual return calculation can start at year end\n",
         "def get_annual_returns_year_end_df(data_adj_close_df, calculation_end_date_str):\n",
         "    annual_returns_percent = data_adj_close_df.pct_change().dropna(how='all')\n",
-        "    annual_returns_percent.columns = map(str.lower, annual_returns_percent.columns)\n",
         "    return annual_returns_percent\n",
         "\n",
         "#==============================================================================\n",
@@ -8624,7 +8546,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMHSLiMMM4eJ+oBV0m8kvz0",
+      "authorship_tag": "ABX9TyOs+cW0vNKzqxkCfrm1ebt/",
       "include_colab_link": true
     },
     "kernelspec": {
