--- a/notebook/finance.ipynb
+++ b/notebook/finance.ipynb
@@ -355,7 +355,7 @@
         "\n",
         "Author: Gang Luo\n",
         "'''\n",
-        "script_version = '(2024-03-04.2)'\n",
+        "script_version = '(2024-03-04.3)'\n",
         "import gradio as gr\n",
         "import yfinance as yf\n",
         "import pandas as pd\n",
@@ -428,9 +428,9 @@
         "    data_adj_close.index=data_adj_close.index.date\n",
         "    data_adj_close_year_end.index=data_adj_close_year_end.index.date\n",
         "\n",
-        "    last_date = data_adj_close.index[-1]\n",
+        "    last_date = data_adj_close_year_end.index[-1]\n",
         "    data_adj_close_year_end = data_adj_close_year_end.rename(index={last_date: end_date_str})\n",
-        "\n",
+        "    #print(\"\\nstock_prices_df\\n\", end_date_str, \"\\n\", data_adj_close_year_end)\n",
         "    return data_adj_close_year_end, data_adj_close\n",
         "\n",
         "#==============================================================================\n",
@@ -773,6 +773,7 @@
         "    data_adj_close_year_end_df, data_adj_close_df = stock_prices_df(tickers, calculation_end_date_str)\n",
         "    output_dataframe= data_adj_close_year_end_df\n",
         "    output_html1=output_string1 + output_dataframe.to_html()\n",
+        "    #print(\"\\ndebug1  output_dataframe\\n\",  output_string1, output_dataframe)\n",
         "\n",
         "    #  Annual Total Return\n",
         "    output_string = f\"\\nAnnual Total Return (%) as {calculation_end_date_str}\\n\"\n",
@@ -786,12 +787,12 @@
         "    output_dataframe = output_dataframe.rename(index={last_date: calculation_end_date_str})\n",
         "    # Convert the DataFrame to HTML, Combine the expected string outputs\n",
         "    output_html2 = output_string + output_dataframe.to_html()\n",
-        "    print(\"\\ndebug2  output_dataframe\\n\", output_dataframe)\n",
+        "    #print(\"\\ndebug2  output_dataframe\\n\", output_dataframe)\n",
         "\n",
         "    # annual_returns  - at any given day, for calculating trailing and cumulative returns, not to be displayed\n",
         "    #annual_returns_dataframe=get_annual_returns_tickers_df(tickers, calculation_end_date_for_others_str)\n",
         "    annual_returns_dataframe=get_annual_returns_anyday_df(data_adj_close_df, calculation_end_date_str)\n",
-        "    print(\"\\ndebug2-T  annual_returns_dataframe\\n\", annual_returns_dataframe)\n",
+        "    #print(\"\\ndebug2-T  annual_returns_dataframe\\n\", annual_returns_dataframe)\n",
         "\n",
         "    # Trailing Return\n",
         "    if (leap_year):\n",
@@ -844,7 +845,7 @@
         "#web_block.launch(debug=True)\n",
         "\n",
         "# test cases:\n",
-        "# calculation_response(\"4\")\n",
+        "#calculation_response(\"8\")\n",
         "#calculation_response(\"SPY\")\n",
         "\n"
       ]
@@ -862,7 +863,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "wx0H96719E1r"
+        "id": "gAMqTX9WGHYF"
       },
       "outputs": [],
       "source": [
@@ -883,7 +884,7 @@
         "\n",
         "Author: Gang Luo\n",
         "'''\n",
-        "script_version = '(2024-03-04.2)'\n",
+        "script_version = '(2024-03-04.3)'\n",
         "import gradio as gr\n",
         "import yfinance as yf\n",
         "import pandas as pd\n",
@@ -956,9 +957,9 @@
         "    data_adj_close.index=data_adj_close.index.date\n",
         "    data_adj_close_year_end.index=data_adj_close_year_end.index.date\n",
         "\n",
-        "    last_date = data_adj_close.index[-1]\n",
+        "    last_date = data_adj_close_year_end.index[-1]\n",
         "    data_adj_close_year_end = data_adj_close_year_end.rename(index={last_date: end_date_str})\n",
-        "\n",
+        "    #print(\"\\nstock_prices_df\\n\", end_date_str, \"\\n\", data_adj_close_year_end)\n",
         "    return data_adj_close_year_end, data_adj_close\n",
         "\n",
         "#==============================================================================\n",
@@ -1301,6 +1302,7 @@
         "    data_adj_close_year_end_df, data_adj_close_df = stock_prices_df(tickers, calculation_end_date_str)\n",
         "    output_dataframe= data_adj_close_year_end_df\n",
         "    output_html1=output_string1 + output_dataframe.to_html()\n",
+        "    #print(\"\\ndebug1  output_dataframe\\n\",  output_string1, output_dataframe)\n",
         "\n",
         "    #  Annual Total Return\n",
         "    output_string = f\"\\nAnnual Total Return (%) as {calculation_end_date_str}\\n\"\n",
@@ -1314,12 +1316,12 @@
         "    output_dataframe = output_dataframe.rename(index={last_date: calculation_end_date_str})\n",
         "    # Convert the DataFrame to HTML, Combine the expected string outputs\n",
         "    output_html2 = output_string + output_dataframe.to_html()\n",
-        "    print(\"\\ndebug2  output_dataframe\\n\", output_dataframe)\n",
+        "    #print(\"\\ndebug2  output_dataframe\\n\", output_dataframe)\n",
         "\n",
         "    # annual_returns  - at any given day, for calculating trailing and cumulative returns, not to be displayed\n",
         "    #annual_returns_dataframe=get_annual_returns_tickers_df(tickers, calculation_end_date_for_others_str)\n",
         "    annual_returns_dataframe=get_annual_returns_anyday_df(data_adj_close_df, calculation_end_date_str)\n",
-        "    print(\"\\ndebug2-T  annual_returns_dataframe\\n\", annual_returns_dataframe)\n",
+        "    #print(\"\\ndebug2-T  annual_returns_dataframe\\n\", annual_returns_dataframe)\n",
         "\n",
         "    # Trailing Return\n",
         "    if (leap_year):\n",
@@ -1372,7 +1374,7 @@
         "#web_block.launch(debug=True)\n",
         "\n",
         "# test cases:\n",
-        "# calculation_response(\"4\")\n",
+        "#calculation_response(\"8\")\n",
         "#calculation_response(\"SPY\")\n",
         "\n"
       ]
@@ -8562,7 +8564,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNQtkl6sOjpef0SK2k3aNba",
+      "authorship_tag": "ABX9TyPCHzjYISU1c5hF3uDbp2V6",
       "include_colab_link": true
     },
     "kernelspec": {
